[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bharatpay-mcp"
version = "0.1.0"
description = "An MCP server giving AI agents access to Indian fintech utilities — IFSC, PAN, GSTIN, pincodes, mutual fund NAV, UPI VPAs, and INR formatting."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Angelina Gupta" },
]
keywords = ["mcp", "indian-fintech", "ifsc", "pan", "gstin", "razorpay", "upi", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
bharatpay-mcp = "bharatpay_mcp.server:main"

[project.urls]
Homepage = "https://github.com/angelina10504/bharatpay-mcp"
Repository = "https://github.com/angelina10504/bharatpay-mcp"
Issues = "https://github.com/angelina10504/bharatpay-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bharatpay_mcp"]
